<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="txt_sky">
        <item>Clear</item>
        <item>Partly cloudy</item>
        <item>Cloudy</item>
        <item>Rain</item>
        <item>Lightning</item>
        <item>Snow</item>
    </string-array>
    <string-array name="wind_direction">
        <item>Calm</item>
        <item>North</item>
        <item>North-East</item>
        <item>East</item>
        <item>South-East</item>
        <item>South</item>
        <item>South-West</item>
        <item>West</item>
        <item>North-West</item>
    </string-array>
    <string-array name="cities">
        <item>@string/mow</item>
        <item>@string/ber</item>
        <item>@string/par</item>
        <item>@string/prg</item>
    </string-array>
    <string name="app_name">Weather_2</string>
    <string name="mow">Moscow</string>
    <string name="prg">Prague</string>
    <string name="par">Paris</string>
    <string name="ber">Berlin</string>
    <string name="cloudly">Cloudly</string>
    <string name="degree" translatable="false">u00B0</string>
    <string name="choice_city">Enter a city</string>
    <string name="settings">Settings</string>
    <string name="extra_parameters">Extra parametres</string>
    <string name="sun_moon">The Sun and the Moon</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="wind">Wind</string>
    <string name="m_s">m/s</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="mmHg">mmHg</string>
    <string name="lastCities">Last viewed cities</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="wiki">https://en.wikipedia.org/wiki/</string>
    <string name="browser_abs">Browser not found</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="zero_city">Enter city</string>
</resources>
